# ai4r_ws

./: webcam_test_hard_hat.py
Assignments/: yolov8_test1.py
Assignments/aias/: pyvenv.cfg
Assignments/list/: pyvenv.cfg
depth_estimation/: main.py
fine_tune_helmet/: main.py
install/: local_setup.sh  setup.sh
install/relbot_video_interface/lib/relbot_video_interface/: video_interface
install/relbot_video_interface/share/relbot_video_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/relbot_video_interface/share/relbot_video_interface/launch/: video_interface.launch.py
install/yolobot_control/share/yolobot_control/: package.sh
install/yolobot_description/share/yolobot_description/: local_setup.sh  package.sh
install/yolobot_gazebo/share/yolobot_gazebo/: package.sh
install/yolobot_recognition/share/yolobot_recognition/: local_setup.sh  package.sh
install/yolov8_msgs/share/yolov8_msgs/: local_setup.sh  package.sh
log/: latest_build
src/relbot_video_interface/: setup.cfg  setup.py
src/relbot_video_interface/relbot_video_interface/: video_interface_node.py
